[gd_scene load_steps=49 format=4 uid="uid://dh3qg8x8h3crb"]

[ext_resource type="Texture2D" uid="uid://bne7p4mevepe3" path="res://Assets/Mossy Fantasy/Mossy Tileset/Background.jpg" id="1_5hnhx"]
[ext_resource type="Texture2D" uid="uid://dpevpd2btth2h" path="res://Assets/Fantasy Swamp Forest/Free/BG_3/BG_3.png" id="2_78pok"]
[ext_resource type="Texture2D" uid="uid://bsaok2dvl8qmv" path="res://Assets/Mossy Fantasy/Mossy Tileset/Mossy - FloatingPlatforms Resized.png" id="3_lvfll"]
[ext_resource type="Texture2D" uid="uid://bc082gp5oil08" path="res://Assets/Fantasy Swamp Forest/Free/BG_2/BG_2.png" id="4_jcnlr"]
[ext_resource type="Texture2D" uid="uid://drbvn3j1ijhdq" path="res://Assets/Fantasy Swamp Forest/Free/BG_1/BG_1.png" id="5_5kfcu"]
[ext_resource type="TileSet" uid="uid://oi42weg2s8wo" path="res://Tilesets/Level 2.tres" id="6_i558w"]
[ext_resource type="Texture2D" uid="uid://cnrm824cpeq3w" path="res://Assets/drawn assets/Untitled_Artwork 5.png" id="7_cuxq2"]
[ext_resource type="Script" uid="uid://du32yyamw7mbs" path="res://Scripts/character_body_2d.gd" id="8_wvr33"]
[ext_resource type="Texture2D" uid="uid://bkv1wxbshxjxj" path="res://Assets/CharacterAnimations/RecieveDamage.png" id="9_sgm4o"]
[ext_resource type="Texture2D" uid="uid://bar6sybdhad8b" path="res://Assets/CharacterAnimations/Attack.png" id="10_6r3eb"]
[ext_resource type="Texture2D" uid="uid://baotpsko8htyl" path="res://Assets/CharacterAnimations/Die.png" id="11_2pufk"]
[ext_resource type="Texture2D" uid="uid://cc2a0a4dw07wy" path="res://Assets/CharacterAnimations/Happy.png" id="12_btc8u"]
[ext_resource type="Texture2D" uid="uid://oliv5m37v1ts" path="res://Assets/CharacterAnimations/Idle.png" id="13_ikghu"]
[ext_resource type="Texture2D" uid="uid://dwsl11ln6kapd" path="res://Assets/CharacterAnimations/Jump.png" id="14_i6smf"]
[ext_resource type="Texture2D" uid="uid://f8manbwbons5" path="res://Assets/CharacterAnimations/Run.png" id="15_d4rhq"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p24lo"]
texture = ExtResource("3_lvfll")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_3iti4"]
sources/0 = SubResource("TileSetAtlasSource_p24lo")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jen0v"]
size = Vector2(7258, 66)

[sub_resource type="CircleShape2D" id="CircleShape2D_dv2v8"]
radius = 13.152946

[sub_resource type="AtlasTexture" id="AtlasTexture_4hnp4"]
atlas = ExtResource("9_sgm4o")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_p20a5"]
atlas = ExtResource("9_sgm4o")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fmvl"]
atlas = ExtResource("9_sgm4o")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5euc"]
atlas = ExtResource("9_sgm4o")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ho4pc"]
atlas = ExtResource("10_6r3eb")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_tc0eq"]
atlas = ExtResource("11_2pufk")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhtn6"]
atlas = ExtResource("11_2pufk")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhx1d"]
atlas = ExtResource("11_2pufk")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_t86ul"]
atlas = ExtResource("11_2pufk")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ebfl"]
atlas = ExtResource("11_2pufk")
region = Rect2(2048, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_sn3rh"]
atlas = ExtResource("11_2pufk")
region = Rect2(2560, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1jbf"]
atlas = ExtResource("12_btc8u")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_hi2wx"]
atlas = ExtResource("12_btc8u")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xjbt"]
atlas = ExtResource("13_ikghu")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy3yb"]
atlas = ExtResource("13_ikghu")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilcng"]
atlas = ExtResource("14_i6smf")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vgnj"]
atlas = ExtResource("14_i6smf")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcsjw"]
atlas = ExtResource("14_i6smf")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_8oi7v"]
atlas = ExtResource("14_i6smf")
region = Rect2(2560, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sjwh"]
atlas = ExtResource("14_i6smf")
region = Rect2(3072, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fqoy"]
atlas = ExtResource("14_i6smf")
region = Rect2(4096, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ejhj"]
atlas = ExtResource("14_i6smf")
region = Rect2(4608, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_twvdn"]
atlas = ExtResource("14_i6smf")
region = Rect2(5120, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivlpf"]
atlas = ExtResource("15_d4rhq")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmd7o"]
atlas = ExtResource("15_d4rhq")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_0eqsl"]
atlas = ExtResource("15_d4rhq")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_sufmp"]
atlas = ExtResource("15_d4rhq")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_efke1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hnp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p20a5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fmvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5euc")
}],
"loop": true,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho4pc")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tc0eq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhtn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhx1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t86ul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ebfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sn3rh")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1jbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hi2wx")
}],
"loop": true,
"name": &"happy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xjbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy3yb")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilcng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vgnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcsjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8oi7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sjwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fqoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ejhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twvdn")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivlpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmd7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0eqsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sufmp")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5vonu"]
radius = 110.0
height = 460.0

[node name="Level 2" type="Node2D"]

[node name="Parallax" type="Node2D" parent="."]
position = Vector2(739, -51)

[node name="Parallax2D" type="Parallax2D" parent="Parallax"]
scroll_scale = Vector2(0.5, 1)
repeat_times = 5

[node name="Sprite2D" type="Sprite2D" parent="Parallax/Parallax2D"]
position = Vector2(-651, 37)
texture = ExtResource("1_5hnhx")

[node name="Sprite2D2" type="Sprite2D" parent="Parallax/Parallax2D"]
position = Vector2(143, 37)
scale = Vector2(-1, 1)
texture = ExtResource("1_5hnhx")

[node name="Bg3" type="Sprite2D" parent="Parallax/Parallax2D"]
visible = false
texture = ExtResource("2_78pok")

[node name="Parallax2D2" type="Parallax2D" parent="Parallax"]
scroll_scale = Vector2(0.3, 1)
repeat_times = 3

[node name="Sprite2D" type="TileMapLayer" parent="Parallax/Parallax2D2"]
position = Vector2(0, -1)
tile_map_data = PackedByteArray("AADF//j/AAACAAIAAADF//n/AAACAAMAAADG//j/AAADAAIAAADG//n/AAADAAMAAADH//j/AAAEAAIAAADH//n/AAAEAAMAAADI//j/AAAFAAIAAADI//n/AAAFAAMAAADL//z/AAACAAIAAADL//3/AAACAAMAAADM//z/AAADAAIAAADM//3/AAADAAMAAADN//z/AAAEAAIAAADN//3/AAAEAAMAAADO//z/AAAFAAIAAADO//3/AAAFAAMAAADP/wAAAAACAAIAAADP/wEAAAACAAMAAADQ/wAAAAADAAIAAADQ/wEAAAADAAMAAADR/wAAAAAEAAIAAADR/wEAAAAEAAMAAADS/wAAAAAFAAIAAADS/wEAAAAFAAMAAAA=")
tile_set = SubResource("TileSet_3iti4")

[node name="Bg2" type="Sprite2D" parent="Parallax/Parallax2D2"]
visible = false
texture = ExtResource("4_jcnlr")

[node name="Parallax2D3" type="Parallax2D" parent="Parallax"]
scroll_scale = Vector2(0.1, 1)
scroll_offset = Vector2(-455, 128)
repeat_times = 3

[node name="Bg1" type="Sprite2D" parent="Parallax/Parallax2D3"]
visible = false
texture = ExtResource("5_5kfcu")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(16, 22)
rotation = 8.483e-05
tile_map_data = PackedByteArray("AAD1/wEAAAACAAAAAAD1/wIAAAACAAEAAAD2/wEAAAAJAAgAAAD2/wIAAAAJAAkAAAD3/wEAAAAKAAgAAAD3/wIAAAAKAAkAAAD4/wEAAAALAAgAAAD4/wIAAAALAAkAAAD5/wEAAAAMAAgAAAD5/wIAAAAMAAkAAAD6/wEAAAACAAAAAAD6/wIAAAACAAEAAAD7/wEAAAADAAAAAAD7/wIAAAADAAEAAAD8/wEAAAAFAAAAAAD8/wIAAAAFAAEAAAD9/wEAAAAAAAcAAAD9/wIAAAAAAAcAAAD+/wEAAAAAAAcAAAD+/wIAAAAAAAcAAAD//wEAAAAAAAcAAAD//wIAAAAAAAcAAAAAAAEAAAAAAAcAAAAAAAIAAAAAAAcAAAABAAEAAAAAAAcAAAABAAIAAAAAAAcAAAADAAEAAAAAAAcAAAADAAIAAAAAAAYAAAAEAAEAAAAAAAYAAAAEAAIAAAAAAAYAAAAFAAEAAAAAAAYAAAAFAAIAAAAAAAYAAAAGAAEAAAAAAAYAAAAGAAIAAAAAAAYAAAAHAAIAAAAAAAYAAAAHAAMAAAAAAAYAAAAIAAIAAAAAAAYAAAAIAAMAAAAAAAYAAAAJAAQAAAAAAAYAAAAKAAMAAAABAAYAAAAKAAQAAAABAAcAAAALAAQAAAACAAcAAAD1/wMAAAACAAIAAAD2/wMAAAAJAAoAAAD3/wMAAAAKAAoAAAD4/wMAAAALAAoAAAD5/wMAAAAMAAoAAAD6/wMAAAACAAIAAAD7/wMAAAADAAIAAAD8/wMAAAAFAAIAAAD9/wMAAAAAAAcAAAD+/wMAAAAAAAcAAAD//wMAAAAAAAcAAAAAAAMAAAAAAAcAAAABAAMAAAAAAAcAAAAIAAQAAAAAAAYAAAAHAAQAAAAAAAYAAAABAAQAAAADAAYAAAAAAAQAAAACAAYAAAD//wQAAAABAAYAAAD+/wQAAAAAAAcAAAD9/wQAAAAAAAcAAAD8/wQAAAAFAAMAAAD7/wQAAAADAAMAAAD6/wQAAAACAAMAAAD5/wQAAAAMAAsAAAD4/wQAAAALAAsAAAD3/wQAAAAKAAsAAAD2/wQAAAAJAAsAAAD0/wMAAAACAAIAAAD0/wQAAAACAAMAAAD1/wQAAAACAAMAAAD0/wUAAAACAAQAAAD1/wUAAAACAAQAAAD2/wUAAAAJAAwAAAD3/wUAAAAKAAwAAAD4/wUAAAALAAwAAAD5/wUAAAAMAAwAAAD6/wUAAAACAAQAAAD7/wUAAAADAAQAAAD8/wUAAAAFAAQAAAD9/wUAAAAAAAcAAAAEAAUAAAAAAAYAAAAFAAUAAAAAAAYAAAAHAAUAAAAAAAYAAAAIAAUAAAAAAAYAAAAJAAUAAAAAAAYAAAABAAUAAAADAAcAAAAAAAUAAAACAAcAAAD//wUAAAABAAcAAAD+/wUAAAAAAAcAAAADAAUAAAAAAAYAAADz/wYAAAAKAA0AAAD0/wYAAAACAAUAAAD1/wYAAAACAAUAAAD2/wYAAAAJAA0AAAD3/wYAAAAKAA0AAAD4/wYAAAALAA0AAAD5/wYAAAAMAA0AAAD6/wYAAAACAAUAAAD6/wcAAAAAAAYAAAD7/wcAAAAAAAYAAAABAAYAAAAAAAYAAAACAAYAAAAAAAYAAAADAAYAAAAAAAYAAAAEAAYAAAAAAAYAAAAFAAYAAAAAAAYAAAAGAAYAAAAAAAYAAAAHAAYAAAAAAAYAAAAIAAYAAAAAAAYAAAAJAAYAAAAAAAYAAAD//wcAAAAAAAYAAAD+/wcAAAAAAAYAAAAAAAcAAAAAAAYAAAABAAcAAAAAAAYAAAACAAcAAAAAAAYAAAADAAcAAAAAAAYAAAAEAAcAAAAAAAYAAAAFAAcAAAAAAAYAAAAGAAcAAAAAAAYAAAAHAAcAAAAAAAYAAAAIAAcAAAAAAAYAAAAJAAcAAAAAAAYAAAAKAAcAAAAAAAYAAAALAAcAAAAAAAYAAAAMAAcAAAAAAAYAAAANAAEAAAAAAAYAAAANAAIAAAAAAAYAAAAOAAEAAAAAAAYAAAAOAAIAAAAAAAYAAAAPAAEAAAAAAAYAAAAPAAIAAAAAAAYAAAAQAPz/AAAAAAYAAAAQAP3/AAAAAAYAAAARAPz/AAAAAAYAAAARAP3/AAAAAAYAAAASAPz/AAAAAAYAAAASAP3/AAAAAAYAAAAWAAUAAAAAAAYAAAAWAAYAAAAAAAYAAAAXAAUAAAAAAAYAAAAXAAYAAAAAAAYAAAAYAAUAAAAAAAYAAAAYAAYAAAAAAAYAAAANAAcAAAAAAAYAAAANAAgAAAAAAAYAAAAOAAcAAAAAAAYAAAAOAAgAAAAAAAYAAAAPAAcAAAAAAAYAAAAPAAgAAAAAAAYAAAAQAAcAAAAAAAYAAAAQAAgAAAAAAAYAAAARAAcAAAAAAAYAAAARAAgAAAAAAAYAAAASAAcAAAAAAAYAAAASAAgAAAAAAAYAAAATAAcAAAAAAAYAAAATAAgAAAAAAAYAAAAUAAcAAAAAAAYAAAAUAAgAAAAAAAYAAAAVAAcAAAAAAAYAAAAVAAgAAAAAAAYAAAAWAAcAAAAAAAYAAAAWAAgAAAAAAAYAAAAXAAcAAAAAAAYAAAAXAAgAAAAAAAYAAAAYAAcAAAAAAAYAAAAYAAgAAAAAAAYAAAAZAAcAAAAAAAYAAAAZAAgAAAAAAAYAAAAaAAcAAAAAAAYAAAAaAAgAAAAAAAYAAAAbAAcAAAAAAAYAAAAbAAgAAAAAAAYAAAATAPz/AAAGAAcAAAAUAPz/AAAHAAcAAAAXAPn/AAAAAAYAAAAXAPr/AAAAAAYAAAAYAPn/AAAAAAYAAAAYAPr/AAAAAAYAAAAZAPn/AAAAAAYAAAAZAPr/AAAAAAYAAAAaAPn/AAAAAAYAAAAaAPr/AAAAAAYAAAAbAPn/AAAAAAYAAAAbAPr/AAAAAAYAAAAcAPn/AAAAAAYAAAAcAPr/AAAAAAYAAAAaAPj/AAAAAAYAAAAbAPj/AAAAAAYAAAAcAPj/AAAAAAYAAAAcAAcAAAAAAAYAAAAcAAgAAAAAAAYAAAAdAAcAAAAAAAYAAAAdAAgAAAAAAAYAAAAeAAcAAAAAAAYAAAAeAAgAAAAAAAYAAAAfAAcAAAAAAAYAAAAfAAgAAAAAAAYAAAAgAAcAAAAAAAYAAAAgAAgAAAAAAAYAAAAhAAcAAAAAAAYAAAAhAAgAAAAAAAYAAAAiAAcAAAAAAAYAAAAiAAgAAAAAAAYAAAAjAAcAAAAAAAYAAAAjAAgAAAAAAAYAAAAkAAcAAAAAAAYAAAAkAAgAAAAAAAYAAAAlAAcAAAAAAAYAAAAlAAgAAAAAAAYAAAD5/wcAAAAAAAYAAAD4/wcAAAAAAAYAAAD3/wcAAAAAAAYAAAD2/wcAAAAAAAYAAAD1/wcAAAAAAAYAAAD0/wcAAAAAAAYAAADz/wcAAAAAAAYAAADy/wcAAAAAAAYAAADy/wYAAAAJAA0AAAD0/wIAAAACAAEAAAD8/wAAAAAAAAcAAAD9/wAAAAAAAAcAAAD+/wAAAAAAAAcAAAD//wAAAAAAAAcAAAAAAAAAAAAAAAcAAAABAAAAAAAAAAcAAAAGAAUAAAAAAAYAAAAFAAAAAAAAAAYAAAAGAAAAAAAAAAcAAAACAPz/AAAAAAcAAAACAP3/AAABAAYAAAACAP7/AAABAAcAAAACAAAAAAAAAAcAAAACAAEAAAAAAAcAAAADAPz/AAAGAAYAAAADAP3/AAACAAYAAAADAP7/AAACAAcAAAADAP//AAAAAAcAAAADAAAAAAAAAAcAAAACAAQAAAAEAAYAAAAIAAEAAAAAAAYAAAAJAAEAAAAAAAYAAAAJAAIAAAAAAAYAAAALAAMAAAACAAYAAAAMAAQAAAADAAcAAAANAAQAAAAEAAcAAAACAAUAAAAEAAcAAAAAAAYAAAAAAAYAAAABAAgAAAAAAAYAAAACAAgAAAAAAAYAAAADAAgAAAAAAAYAAAAEAAgAAAAAAAYAAAAFAAgAAAAAAAYAAAAGAAgAAAAAAAYAAAAHAAgAAAAAAAYAAAAIAAgAAAAAAAYAAAAOAAYAAAAAAAYAAAAPAAYAAAAAAAYAAAAQAAYAAAAAAAYAAAAKAAgAAAAAAAYAAAALAAgAAAAAAAYAAAAMAAgAAAAAAAYAAAATAAkAAAAAAAYAAAAVAAYAAAAAAAYAAAAXAAQAAAAIAA0AAAAWAAQAAAAAAAYAAAAZAAUAAAAAAAYAAAAaAAUAAAAAAAYAAAAbAAYAAAAAAAYAAAAcAAYAAAAAAAYAAAAdAAYAAAAAAAYAAAAeAAYAAAAAAAYAAAAfAAYAAAAAAAYAAAAgAAYAAAAAAAYAAAAhAAYAAAAAAAYAAAAiAAYAAAAAAAYAAAAmAAcAAAAAAAYAAAAnAAcAAAAAAAYAAAAoAAcAAAAAAAYAAAAmAAgAAAAAAAYAAAAnAAgAAAAAAAYAAAAmAAkAAAAAAAYAAAAZAAYAAAAAAAYAAAAVAAUAAAAAAAYAAAAUAAUAAAAAAAYAAAATAAQAAAAAAAYAAAASAAMAAAAAAAYAAAARAAIAAAAHAAQAAAAQAAIAAAAGAAQAAAAQAAEAAAAGAAMAAAARAAEAAAAHAAMAAAAQAAAAAAAGAAIAAAARAP//AAAHAAEAAAASAP//AAAAAAYAAAASAP7/AAAAAAYAAAARAP7/AAAHAAAAAAAQAP7/AAAGAAAAAAAPAP//AAAAAAYAAAAOAAAAAAAAAAYAAAAPAAAAAAAAAAYAAAAQAP//AAAGAAEAAAAVAPv/AAAAAAYAAAAWAPv/AAAAAAYAAAAXAPv/AAAAAAYAAAAVAPz/AAAAAAYAAAAYAPv/AAAAAAYAAAAdAPn/AAAAAAYAAAAeAPj/AAAAAAYAAAAfAPj/AAAAAAYAAAAgAPf/AAAAAAYAAAAhAPf/AAAAAAYAAAAfAPf/AAAAAAYAAAAdAPj/AAAAAAYAAAAWAPz/AAAAAAYAAAASAPv/AAAAAAYAAAATAPr/AAAAAAYAAAAUAPn/AAAAAAYAAAAVAPn/AAAAAAYAAAAWAPj/AAAAAAYAAAAXAPj/AAAAAAYAAAAYAPj/AAAAAAYAAAAZAPj/AAAAAAYAAAAaAPf/AAAAAAYAAAAbAPf/AAAAAAYAAAAcAPf/AAAAAAYAAAAdAPf/AAAAAAYAAAAeAPf/AAAAAAYAAAAWAPr/AAAAAAYAAAAWAPn/AAAAAAYAAAAVAPr/AAAAAAYAAAAUAPr/AAAAAAYAAAATAPv/AAAGAAYAAAARAPv/AAAAAAYAAAAPAP3/AAAAAAYAAAAPAP7/AAAAAAYAAAAVAP3/AAAAAAYAAAAWAP3/AAAAAAYAAAANAAMAAAAEAAYAAAAJAAgAAAAAAAYAAAAJAAkAAAAAAAYAAAAIAAkAAAAAAAYAAAAEAP7/AAADAAcAAAAHAAAAAAAAAAcAAAAEAP3/AAADAAYAAAAHAP7/AAAAAAcAAAAHAP//AAAAAAcAAAAIAPr/AAAAAAcAAAAIAPv/AAAAAAcAAAAIAPz/AAAAAAcAAAAIAP7/AAAAAAcAAAAIAP//AAAAAAcAAAALAAEAAAAAAAYAAAAMAAEAAAAAAAYAAAD2////AAAAAAYAAAD1////AAAAAAYAAAD1/wAAAAAAAAYAAAD0/wgAAAAAAAYAAAD2/wAAAAAAAAYAAAD2//7/AAAAAAYAAAD4/wAAAAAAAAYAAAD4////AAAAAAYAAAD5/wAAAAAAAAYAAAARAAAAAAAHAAIAAAASAAAAAAAAAAYAAAASAAEAAAAAAAYAAAASAAIAAAAAAAYAAAATAP//AAAAAAYAAAATAAAAAAAAAAYAAAATAAEAAAAAAAYAAAATAAIAAAAAAAYAAAAUAP//AAAAAAYAAAAUAAEAAAAAAAYAAAAUAAIAAAAAAAYAAAAVAP7/AAAAAAYAAAAVAP//AAAAAAYAAAAVAAAAAAAAAAYAAAAVAAEAAAAAAAYAAAAVAAIAAAAAAAYAAAAXAP3/AAAAAAYAAAAYAP3/AAAAAAYAAAAYAPz/AAAAAAYAAAAZAPz/AAAGAAcAAAAWAP7/AAAAAAYAAAAXAPz/AAAAAAYAAAAZAPv/AAAGAAYAAAALAAIAAAAGAAYAAAAKAAIAAAAAAAYAAAAMAAIAAAAHAAYAAAAOAP//AAAAAAYAAAANAAAAAAAAAAYAAAAJAAMAAAAAAAYAAAAOAP7/AAAAAAYAAAANAP//AAAAAAYAAAAMAAAAAAAAAAYAAAAMAAMAAAADAAYAAAAOAAMAAAAAAAYAAAAPAAMAAAAAAAYAAAAWAP//AAAAAAYAAAAXAP//AAAIAAgAAAAYAP//AAAJAAgAAAAZAP7/AAAAAAYAAAAaAP7/AAAAAAYAAAAYAP7/AAAAAAYAAAAXAP7/AAAAAAYAAAAaAP3/AAAAAAYAAAAaAPz/AAAHAAcAAAAZAP3/AAAAAAYAAAAQAAMAAAAGAAUAAAAWAAAAAAAAAAYAAAAXAAAAAAAIAAkAAAAZAP//AAAKAAgAAAAaAP//AAALAAgAAAAbAP//AAAMAAgAAAAbAP7/AAAAAAYAAAARAAMAAAAHAAUAAAATAAMAAAAAAAYAAAAWAAEAAAAAAAYAAAAXAAEAAAAIAAoAAAAYAAEAAAAJAAoAAAAZAAAAAAAKAAkAAAAaAAAAAAALAAkAAAAbAAAAAAAMAAkAAAAcAP//AAANAAgAAAAYAAAAAAAJAAkAAAAUAAMAAAAAAAYAAAASAAQAAAAAAAYAAAAWAAIAAAAAAAYAAAAXAAIAAAAIAAsAAAAZAAEAAAAKAAoAAAAOAAQAAAAAAAYAAAAKAAEAAAAAAAYAAAAHAAEAAAAAAAYAAAAEAAAAAAAAAAYAAAABAP//AAAAAAYAAAAAAP//AAAAAAYAAAAAAP7/AAAAAAYAAAD///7/AAAAAAYAAAD+//7/AAAAAAYAAAD9//7/AAAAAAYAAAD8//7/AAAAAAYAAAD8////AAAAAAYAAAD7////AAAAAAYAAAD6////AAAAAAYAAAD5////AAAAAAYAAAD4//7/AAAAAAYAAAD4//3/AAAAAAYAAAD6//7/AAAAAAYAAAD6//3/AAAAAAYAAAD6//z/AAAAAAYAAAD7//v/AAAAAAYAAAD7//r/AAAAAAYAAAD7//n/AAAAAAYAAAD7//j/AAAAAAYAAAD7//f/AAAAAAYAAAD6//v/AAAAAAYAAAAEAPz/AAAHAAYAAAAFAP3/AAAEAAYAAAAFAP7/AAAEAAcAAAAJAP7/AAAAAAYAAAAKAP7/AAAAAAYAAAAJAPz/AAAAAAcAAAAJAP3/AAAAAAcAAAAIAAAAAAAAAAYAAAAIAPn/AAAAAAcAAAAIAPj/AAAAAAcAAAAIAPf/AAAAAAYAAAAHAPn/AAAAAAcAAAAGAPn/AAAAAAYAAAAUAPv/AAAHAAYAAAAFAAMAAAAGAAYAAAAFAAQAAAAGAAcAAAAGAAQAAAAHAAcAAAAGAAMAAAAHAAYAAAAaAPv/AAAHAAYAAAAfAPv/AAAGAAYAAAAfAPz/AAAGAAcAAAAgAPv/AAAHAAYAAAAgAPz/AAAHAAcAAAAXAAMAAAAIAAwAAAAYAAIAAAAJAAsAAAAYAAMAAAAJAAwAAAAYAAQAAAAJAA0AAAAZAAIAAAAKAAsAAAAZAAMAAAAKAAwAAAAZAAQAAAAKAA0AAAAaAAEAAAALAAoAAAAaAAIAAAALAAsAAAAaAAMAAAALAAwAAAAaAAQAAAALAA0AAAAbAAEAAAAMAAoAAAAbAAIAAAAMAAsAAAAbAAMAAAAMAAwAAAAbAAQAAAAMAA0AAAAcAAAAAAANAAkAAAAcAAEAAAANAAoAAAAcAAIAAAANAAsAAAAcAAMAAAANAAwAAAAcAAQAAAANAA0AAAAiAAAAAAABAAYAAAAiAAEAAAABAAcAAAAjAAAAAAACAAYAAAAjAAEAAAACAAcAAAAkAAAAAAADAAYAAAAkAAEAAAADAAcAAAAlAAAAAAAEAAYAAAAlAAEAAAAEAAcAAAAVAPb/AAABAAYAAAAVAPf/AAABAAcAAAAWAPb/AAACAAYAAAAWAPf/AAACAAcAAAAXAPb/AAADAAYAAAAXAPf/AAADAAcAAAAYAPb/AAAEAAYAAAAYAPf/AAAEAAcAAAAmAPn/AAABAAYAAAAmAPr/AAABAAcAAAAnAPn/AAACAAYAAAAnAPr/AAACAAcAAAAoAPn/AAADAAYAAAAoAPr/AAADAAcAAAApAPn/AAAEAAYAAAApAPr/AAAEAAcAAAArAP3/AAAAAAQAAAArAP7/AAAIAAkAAAArAP//AAAIAAoAAAArAAAAAAAIAAsAAAArAAEAAAAIAAwAAAArAAIAAAAIAA0AAAAsAP3/AAAJAAoAAAAsAP7/AAACAAIAAAAsAP//AAACAAMAAAAsAAAAAAAJAAsAAAAsAAEAAAAJAAwAAAAsAAIAAAAJAA0AAAAtAP3/AAAKAAoAAAAtAP7/AAADAAIAAAAtAP//AAADAAMAAAAtAAAAAAAKAAsAAAAtAAEAAAAKAAwAAAAtAAIAAAAKAA0AAAAuAP3/AAADAAIAAAAuAP7/AAALAAkAAAAuAP//AAALAAoAAAAuAAAAAAACAAIAAAAuAAEAAAACAAMAAAAuAAIAAAALAA0AAAAvAP3/AAAEAAIAAAAvAP7/AAAMAAkAAAAvAP//AAAMAAoAAAAvAAAAAAADAAIAAAAvAAEAAAADAAMAAAAvAAIAAAAMAA0AAAAwAP3/AAAFAAIAAAAwAP7/AAANAAkAAAAwAP//AAANAAoAAAAwAAAAAAANAAsAAAAwAAEAAAANAAwAAAAwAAIAAAANAA0AAAAGAP//AAAAAAcAAAAyAPv/AAAGAAYAAAAyAPz/AAAGAAcAAAAzAPv/AAAHAAYAAAAzAPz/AAAHAAcAAAA1APj/AAAGAAYAAAA1APn/AAAGAAcAAAA2APj/AAAHAAYAAAA2APn/AAAHAAcAAAA4APb/AAAGAAYAAAA4APf/AAAGAAcAAAA5APb/AAAHAAYAAAA5APf/AAAHAAcAAAA7APr/AAAGAAAAAAA7APv/AAAGAAEAAAA7APz/AAAGAAIAAAA7AP3/AAAGAAMAAAA7AP7/AAAGAAQAAAA7AP//AAAGAAUAAAA8APr/AAAHAAAAAAA8APv/AAAHAAEAAAA8APz/AAAHAAIAAAA8AP3/AAAHAAMAAAA8AP7/AAAHAAQAAAA8AP//AAAHAAUAAAA/AP3/AAAGAAAAAAA/AP7/AAAGAAEAAAA/AP//AAAGAAIAAAA/AAAAAAAGAAMAAAA/AAEAAAAGAAQAAAA/AAIAAAAGAAUAAABAAP3/AAAHAAAAAABAAP7/AAAHAAEAAABAAP//AAAHAAIAAABAAAAAAAAHAAMAAABAAAEAAAAHAAQAAABAAAIAAAAHAAUAAABDAAAAAAAGAAAAAABDAAEAAAAGAAEAAABDAAIAAAAGAAIAAABDAAMAAAAGAAMAAABDAAQAAAAGAAQAAABDAAUAAAAGAAUAAABEAAAAAAAHAAAAAABEAAEAAAAHAAEAAABEAAIAAAAHAAIAAABEAAMAAAAHAAMAAABEAAQAAAAHAAQAAABEAAUAAAAHAAUAAAA2AAMAAAABAAYAAAA2AAQAAAABAAcAAAA3AAMAAAACAAYAAAA3AAQAAAACAAcAAAA4AAMAAAADAAYAAAA4AAQAAAADAAcAAAA5AAMAAAAEAAYAAAA5AAQAAAAEAAcAAADz/wUAAAAKAAwAAADw/wcAAAAAAAYAAADw/wgAAAAAAAYAAADx/wcAAAAAAAYAAADx/wgAAAAAAAYAAADy/wUAAAAJAAwAAADx/wYAAAAMAA0AAAD6/wAAAAAAAAYAAADz/wMAAAAKAAoAAADz/wQAAAAKAAsAAADw/wQAAAALAAsAAADw/wUAAAALAAwAAADx/wQAAAAMAAsAAADx/wUAAAAMAAwAAADt/wQAAAAAAAMAAADt/wUAAAAAAAQAAADu/wQAAAAJAAsAAADu/wUAAAAJAAwAAADs/wEAAAAAAAcAAADs/wIAAAAAAAcAAADs/wMAAAAAAAcAAADs/wQAAAAAAAcAAADs/wUAAAAAAAcAAADs/wYAAAAAAAcAAADt/wEAAAAAAAAAAADt/wIAAAAAAAEAAADt/wMAAAAAAAIAAADt/wYAAAAAAAUAAADu/wEAAAAJAAgAAADu/wIAAAAJAAkAAADu/wMAAAAJAAoAAADu/wYAAAAJAA0AAADv/wEAAAAKAAgAAADv/wIAAAAKAAkAAADv/wMAAAAKAAoAAADv/wQAAAAKAAsAAADv/wUAAAAKAAwAAADv/wYAAAAKAA0AAADw/wEAAAALAAgAAADw/wIAAAALAAkAAADw/wMAAAALAAoAAADw/wYAAAALAA0AAADx/wEAAAAMAAgAAADx/wIAAAAMAAkAAADx/wMAAAAMAAoAAADy/wEAAAAJAAgAAADy/wIAAAAJAAkAAADy/wMAAAAJAAoAAADy/wQAAAAJAAsAAADz/wEAAAAKAAgAAADz/wIAAAAKAAkAAAD0/wEAAAACAAAAAAD7/wYAAAADAAUAAAD8/wYAAAAFAAUAAAACAAIAAAAAAAcAAAAJAPv/AAAAAAcAAAAKAPv/AAAAAAcAAAAKAPr/AAAAAAcAAAAKAPn/AAABAAUAAAAJAPr/AAAAAAcAAAADAPr/AAAAAAcAAAADAPv/AAAAAAcAAAAEAPr/AAAAAAcAAAACAPr/AAAAAAcAAAABAPz/AAAAAAcAAAAjAP//AAAGAAYAAAAkAP//AAAHAAYAAAArAPr/AAAAAAEAAAArAPv/AAAAAAIAAAArAPz/AAAAAAMAAAAsAPr/AAABAAEAAAAsAPv/AAABAAIAAAAsAPz/AAAJAAkAAAArAPn/AAAAAAAAAAAsAPn/AAABAAAAAAAtAPn/AAACAAAAAAAtAPr/AAACAAEAAAAtAPv/AAADAAIAAAAuAPn/AAADAAAAAAAuAPr/AAAJAAkAAAAuAPv/AAAJAAoAAAAvAPn/AAAEAAAAAAAvAPr/AAAKAAkAAAAvAPv/AAAKAAoAAAAwAPn/AAAFAAAAAAAwAPr/AAAFAAEAAAAwAPv/AAAFAAIAAAAtAPz/AAAKAAkAAAAuAPz/AAADAAIAAAAvAPz/AAAEAAIAAAAwAPz/AAAFAAIAAAABAPL/AAAGAAAAAAABAPP/AAAGAAEAAAABAPT/AAAGAAIAAAABAPX/AAAGAAMAAAABAPb/AAAGAAQAAAABAPf/AAAGAAUAAAACAPL/AAAHAAAAAAACAPP/AAAHAAEAAAACAPT/AAAHAAIAAAACAPX/AAAHAAMAAAACAPb/AAAHAAQAAAACAPf/AAAHAAUAAAAJAPb/AAAIAAgAAAAJAPf/AAAIAAkAAAAJAPj/AAAIAAoAAAAKAPb/AAAJAAgAAAAKAPf/AAAJAAkAAAAKAPj/AAAJAAoAAAALAPb/AAAKAAgAAAALAPf/AAAKAAkAAAALAPj/AAAKAAoAAAAMAPb/AAALAAgAAAAMAPf/AAALAAkAAAAMAPj/AAALAAoAAAANAPb/AAAMAAgAAAANAPf/AAAMAAkAAAANAPj/AAAMAAoAAAAOAPb/AAANAAgAAAAOAPf/AAANAAkAAAAOAPj/AAANAAoAAAAJAPn/AAAAAAUAAAALAPn/AAACAAUAAAAMAPn/AAADAAUAAAANAPn/AAAEAAUAAAAOAPn/AAAFAAUAAAA=")
tile_set = ExtResource("6_i558w")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(0.6, -29.4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(3309, 179)
shape = SubResource("RectangleShape2D_jen0v")

[node name="Area2D" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
position = Vector2(744, -174)
scale = Vector2(0.03, 0.03)
texture = ExtResource("7_cuxq2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(745, -173)
shape = SubResource("CircleShape2D_dv2v8")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(-260, 5)
scale = Vector2(0.9, 0.9)
collision_layer = 3
collision_mask = 3
script = ExtResource("8_wvr33")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
position = Vector2(-1, 3)
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_efke1")
animation = &"dash"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(1, 5)
scale = Vector2(0.1, 0.1)
shape = SubResource("CapsuleShape2D_5vonu")

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
zoom = Vector2(3, 3)
limit_left = -285
limit_top = -325
limit_bottom = 144

[node name="Death" type="Timer" parent="CharacterBody2D"]
wait_time = 1.5
one_shot = true

[node name="DashCooldown" type="Timer" parent="CharacterBody2D"]
one_shot = true

[node name="Dash" type="Timer" parent="CharacterBody2D"]
one_shot = true

[connection signal="animation_finished" from="CharacterBody2D/AnimatedSprite2D" to="CharacterBody2D" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="CharacterBody2D/Death" to="CharacterBody2D" method="_on_death_timeout"]
[connection signal="timeout" from="CharacterBody2D/DashCooldown" to="CharacterBody2D" method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="CharacterBody2D/Dash" to="CharacterBody2D" method="_on_dash_timeout"]
